# 1Bit

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  inference.c  online_learning_demo.c  quantize.c  train.c
include/: onebit_kv_cache.h  onebit_transformer.h
include/onebit/: onebit.h  onebit_compute.h  onebit_config.h  onebit_data.h  onebit_error.h  onebit_inference.h  onebit_memory.h  onebit_model.h  onebit_ops.h  onebit_transformer.h
src/: CMakeLists.txt  kernel_config.c  kernel_config.h  onebit.c  onebit.h  onebit_array.c  onebit_async.c  onebit_attention.h  onebit_base64.c  onebit_binary_ops.c  onebit_buffer.c  onebit_cache.c  onebit_cache_opt.c  onebit_cache_opt.h  onebit_checkpoint.c  onebit_compute.c  onebit_compute.h  onebit_compute_cpu.c  onebit_compute_cuda.cu  onebit_compute_loader.c  onebit_compute_metal.h  onebit_compute_metal.m  onebit_compute_opt.c  onebit_compute_opt.h  onebit_concurrency.c  onebit_config.c  onebit_config.h  onebit_core.h  onebit_cuda.c  onebit_cuda.h  onebit_cuda_kernels.cu  onebit_data.c  onebit_data.h  onebit_dataset.c  onebit_device_manager.c  onebit_embed.h  onebit_error.c  onebit_error.h  onebit_error_handler.c  onebit_ffn.h  (+47 more)
tests/: CMakeLists.txt  test_cuda.c  test_model.c  test_performance.c  test_stress.c
tests/bench/: onebit_compute_bench.c
tests/memory/: onebit_compute_memory_gpu.c  onebit_compute_memory_metal.mm  onebit_compute_memory_safety.c  onebit_compute_memory_stress.c  onebit_compute_memory_test.c
